# hyperion-engine

./: .clang-format  .clang-tidy  .editorconfig  .gitignore  CMakeLists.txt  README.md  vcpkg.json
src/: data_loader.cpp  hyperion_engine.cpp  input_handler.cpp  main.cpp  test_screen.cpp
src/include/engine/: HyperionEngine.cpp  HyperionEngine.h  InputHandler.cpp  InputHandler.h  data_loader.cpp  data_loader.h  hyperion_engine.cpp  hyperion_engine.h  input_handler.cpp  input_handler.h
src/include/entities/: base_entity.h  rendable_entity.h  updatable_entity.h
src/include/screen/: screen_console.h  test_screen.h
src/include/types/: contexts.h  engine_context.h  engine_options.h  mouse_position.h  ndarray.h
src/include/utils/: image_scaler.h
src/screens/: TestScreen.cpp  TestScreen.h  test_screen.cpp  test_screen.h
